# seclang_parser

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  base_test.go  base_test.py  generate.sh  go.mod  go.sum  listener.go  magefile.go  main.go  parser_test.go  pyproject.toml
.github/workflows/: go.yml  pypi-release.yml  pypi-test-release.yml  python.yml  release.yml
g4/: SecLangLexer.g4  SecLangParser.g4  generate.go  generate.sh
parser/: SecLang.g4  SecLangLexer.g4  SecLangParser.g4  generate.go  generate.sh  seclang.g4  seclang_lexer.go  seclang_parser.go  seclangparser_base_listener.go  seclangparser_listener.go
parsing/: dummy.go
src/seclang_parser/: SecLangLexer.py  SecLangParser.py  SecLangParserListener.py  __init__.py  actions.py  cli.py  configuration.py  directives.py  errors.py  listener.py  metadata.py  operators.py  parser.py  transformations.py  variables.py
testdata/: 1.conf  4.conf  REQUEST-905-COMMON-EXCEPTIONS.conf  test2.conf  test3.conf  test6.conf  test7.conf  test_01_comment.conf  test_02_seccompsignature.conf  test_03_secruleengine.conf  test_04_directives.conf  test_05_secaction.conf  test_06_secaction2.conf  test_07_secaction3.conf  test_08_secaction4.conf  test_09_secaction_ctl_01.conf  test_10_secaction_ctl_02.conf  test_11_secaction_ctl_03.conf  test_12_secaction_ctl_04.conf  test_13_secaction_ctl_05.conf  test_14_secaction_ctl_06.conf  test_15_secaction_01.conf  test_17_secrule_02.conf  test_18_secrule_03.conf  test_19_secrule_04.conf  test_20_secrule_05.conf  test_21_secrule_06.conf  test_22_secrule_07.conf  test_23_secrule_08.conf  test_24_secrule_09.conf  test_25_secrule_10.conf  test_26_secrule_11.conf  test_27_secrule_12.conf  test_28_secrule_13.conf  test_29_secrule_14.conf  test_30_secrule_15.conf  test_31_secaction_ctl_07.conf  test_32_secrule_16.conf  test_33_secrule_16.conf  test_34_xml.conf  (+16 more)
testdata/crs/: REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
testdata/plugins/: drupal-rule-exclusions-before.conf  drupal-rule-exclusions-config.conf  google-oauth2-before.conf  google-oauth2-config.conf  wordpress-rule-exclusions-config.conf
tests/: conftest.py  test_cli.py  test_parser.py
